# media-engine

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md
bench/: CMakeLists.txt  bench_audio_effect_chain.cpp  bench_gpu_compose.cpp  bench_harness.hpp  bench_hdr_roundtrip.cpp  bench_ocio_apply.cpp  bench_text_paragraph.cpp  bench_thumbnail_png.cpp  bench_tonemap_kernel.cpp  bench_vfr_av_sync.cpp  peak_rss.hpp
bindings/jni/: CMakeLists.txt  README.md  build.gradle.kts.example  me_jni.cpp  me_jni_progress.cpp  me_jni_progress.hpp
bindings/kotlin-native/: CMakeLists.txt  README.md  kn_link_stub.c  media_engine.def
examples/: CMakeLists.txt
examples/01_passthrough/: CMakeLists.txt  README.md  main.c  sample.timeline.json
examples/02_graph_smoke/: CMakeLists.txt  main.cpp
examples/03_timeline_segments/: CMakeLists.txt  main.cpp
examples/04_probe/: CMakeLists.txt  main.c
examples/05_reencode/: CMakeLists.txt  main.c
examples/06_thumbnail/: CMakeLists.txt  main.c
examples/07_compose_multitrack/: CMakeLists.txt  main.c
examples/08_frame_server_scrub/: CMakeLists.txt  main.c
examples/09_text_clip/: CMakeLists.txt  main.c
examples/10_player_pause_seek/: CMakeLists.txt  main.c
examples/11_error_diagnosis/: CMakeLists.txt  main.c
examples/12_cache_invalidate/: CMakeLists.txt  main.c
examples/13_face_sticker/: CMakeLists.txt  main.c  sample.timeline.json
examples/14_ml_face_landmark/: CMakeLists.txt  main.cpp
examples/15_body_alpha_key/: CMakeLists.txt  main.c  sample.mask.json  sample.timeline.json
examples/16_face_mosaic/: CMakeLists.txt  main.c  sample.landmarks.json  sample.timeline.json
examples/17_m12_color_quartet/: CMakeLists.txt  main.c  sample.timeline.json
examples/18_m12_stylized_quintet/: CMakeLists.txt  main.c  sample.timeline.json
examples/19_m12_blur_variants/: CMakeLists.txt  main.c  sample.timeline.json
examples/20_m12_geometric_pair/: CMakeLists.txt  main.c  sample.timeline.json
src/: CMakeLists.txt
src/api/: cache.cpp  engine.cpp  ml.cpp  player.cpp  probe.cpp  render.cpp  thumbnail.cpp  thumbnail_encode_png.cpp  thumbnail_encode_png.hpp  timeline.cpp
src/audio/: audio_effect.hpp  audio_effect_chain.hpp  gain_audio_effect.hpp  lowpass_audio_effect.hpp  mix.cpp  mix.hpp  mix_kernel.cpp  mix_kernel.hpp  mixer.cpp  mixer.hpp  mixer_builder.cpp  pan_audio_effect.hpp  peaking_eq_audio_effect.hpp  resample.cpp  resample.hpp  resample_kernel.cpp  resample_kernel.hpp  tempo.cpp  tempo.hpp  timestretch_kernel.cpp  timestretch_kernel.hpp  track_feed.cpp  track_feed.hpp
src/color/: ocio_pipeline.cpp  ocio_pipeline.hpp  pipeline.cpp  pipeline.hpp
src/compose/: active_clips.cpp  active_clips.hpp  affine_blit.cpp  affine_blit.hpp  affine_blit_kernel.cpp  affine_blit_kernel.hpp  alpha_over.cpp  alpha_over.hpp  bbox.hpp  blazeface_decode.cpp  blazeface_decode.hpp  blazeface_preprocess.cpp  blazeface_preprocess.hpp  body_alpha_key_kernel.cpp  body_alpha_key_kernel.hpp  body_alpha_key_stage.cpp  body_alpha_key_stage.hpp  chromatic_aberration_kernel.cpp  chromatic_aberration_kernel.hpp  chromatic_aberration_stage.cpp  chromatic_aberration_stage.hpp  compose_cpu_kernel.cpp  compose_cpu_kernel.hpp  convert_rgba8_kernel.cpp  convert_rgba8_kernel.hpp  cross_dissolve.cpp  cross_dissolve.hpp  cross_dissolve_kernel.cpp  cross_dissolve_kernel.hpp  displacement_kernel.cpp  displacement_kernel.hpp  displacement_stage.cpp  displacement_stage.hpp  encode_png_kernel.cpp  encode_png_kernel.hpp  face_mosaic_kernel.cpp  face_mosaic_kernel.hpp  face_mosaic_stage.cpp  face_mosaic_stage.hpp  face_sticker_kernel.cpp  (+67 more)
src/core/: engine_impl.hpp  engine_seed.cpp  engine_seed.hpp  frame_impl.hpp  version.cpp  version.inl.in
src/effect/: blur_effect.cpp  blur_effect.hpp  color_correct_effect.cpp  color_correct_effect.hpp  effect.hpp  effect_chain.hpp  fused_color_correct_effect.cpp  fused_color_correct_effect.hpp  gpu_effect.hpp  gpu_effect_chain.cpp  gpu_effect_chain.hpp  identity_effect.hpp  lut.cpp  lut.hpp  lut_effect.cpp  lut_effect.hpp  noop_gpu_effect.hpp
src/gpu/: bgfx_gpu_backend.cpp  bgfx_gpu_backend.hpp  gpu_backend.cpp  gpu_backend.hpp  null_gpu_backend.hpp  render_thread.cpp  render_thread.hpp
src/graph/: README.md  eval_context.hpp  eval_error.hpp  future.hpp  graph.cpp  graph.hpp  node.hpp  types.hpp
src/inference/: asset_cache.cpp  asset_cache.hpp  coreml_runtime.cpp  coreml_runtime.hpp  coreml_runtime.mm  model_loader.cpp  model_loader.hpp  multiarray_layout.cpp  multiarray_layout.hpp  onnx_runtime.cpp  onnx_runtime.hpp  runtime.hpp  runtime_factory.cpp  runtime_factory.hpp
src/io/: av_err.hpp  decode_audio_kernel.cpp  decode_audio_kernel.hpp  decode_video_kernel.cpp  decode_video_kernel.hpp  demux_context.cpp  demux_context.hpp  demux_kernel.cpp  demux_kernel.hpp  ffmpeg_raii.hpp  ffmpeg_remux.cpp  ffmpeg_remux.hpp  kvazaar_hevc_encoder.cpp  kvazaar_hevc_encoder.hpp  mux_context.cpp  mux_context.hpp
src/openfx/: plugin_cache.cpp  (+2 more)
tests/: CMakeLists.txt  compose_sink_e2e_fixtures.hpp  fixture_skip.hpp  scratch_dir.hpp  test_animated_color.cpp  test_animated_number.cpp  test_animated_number_loader.cpp  test_api_surface_budget.cpp  test_asset_reuse.cpp  test_audio_chunk_graph.cpp  test_audio_effect_chain.cpp  test_audio_mix.cpp  test_audio_mix_kernel.cpp  test_audio_mixer.cpp  test_audio_resample.cpp  test_audio_resample_kernel.cpp  test_audio_timestretch_kernel.cpp  test_audio_track_feed.cpp  test_bench_harness.cpp  test_bgfx_metal_render.cpp  test_bgfx_noop_fallback.cpp  test_blazeface_decode.cpp  test_blazeface_e2e.cpp  test_blazeface_preprocess.cpp  test_blur_effect.cpp  test_body_alpha_key_stub.cpp  test_cache.cpp  test_cache_hit_rate_lower_bound.cpp  test_chromatic_aberration_kernel_pixel.cpp  test_codec_options_abi.cpp  test_codec_resolver.cpp  test_color_correct_effect.cpp  test_color_pipeline.cpp  test_compose_active_clips.cpp  test_compose_affine_blit.cpp  test_compose_alpha_over.cpp  test_compose_body_alpha_key_stage.cpp  test_compose_cross_dissolve.cpp  test_compose_face_mosaic_stage.cpp  test_compose_face_sticker_stage.cpp  (+102 more)
(+349 files in other folders)
